--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "iostream": "cpp",
+        "vector": "cpp"
     }
 }
